--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -78,6 +78,7 @@ input, button, select, optgroup, textarea {
   margin: 0;
 }
 
+/* 5px */
 /* _alignments.scss 
  *
  * 파일 경로 : template/_alignments.scss
@@ -1428,15 +1429,6 @@ input, button, select, optgroup, textarea {
 .picker-modal-content-date-months .date-prev {
   display: table-cell;
   cursor: pointer;
-  width: 0.625rem;
-  height: 1.563rem;
-  -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
-  mask-image: url("../media/icons/icon_arrow_left.svg");
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  mask-position: center;
-  background: #586872;
 }
 
 .picker-modal-content-date-months .date-text {
@@ -6020,52 +6012,8 @@ body.thumbnail-modal-active {
   right: 0;
   width: 77.5rem;
   margin: 0 auto 2em auto;
-  box-sizing: border-box;
   background-color: #ffffff;
   box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out {
-  position: absolute;
-  right: 0.5em;
-  top: 0.5em;
-  width: 2rem;
-  height: 2rem;
-  opacity: 0.5;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:hover,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:hover {
-  opacity: 1;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:before,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:after,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:before,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:after {
-  position: absolute;
-  left: 0.9375rem;
-  content: ' ';
-  height: 2.0625rem;
-  width: 0.125rem;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:before,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:after {
-  background-color: #333333;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:before,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:after {
-  background-color: #CCCCCC;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:before,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:before,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:after,
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:after {
-  transform: rotate(45deg);
 }
 
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-title {
@@ -6073,8 +6021,6 @@ body.thumbnail-modal-active {
   color: #3F4B56;
   font-size: 1rem;
   font-weight: 500;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   border-bottom: solid 0.0625rem #EBEBEB;
   padding: 1.125rem 0 0 1.25rem;
 }
@@ -6082,52 +6028,13 @@ body.thumbnail-modal-active {
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-body {
   overflow: auto;
   height: 40rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   border-bottom: solid 0.0625rem #EBEBEB;
 }
 
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons {
   height: 5rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: right;
+  display: flex;
   padding: 1.25rem 1.25rem 1.25rem 0;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button {
-  padding: 0.6em 1em;
-  margin-right: 0.3125rem;
-  color: #3F4B56;
-  text-transform: uppercase;
-  cursor: pointer;
-  display: inline-block;
-  border: solid 0.0625rem #EBEBEB;
-  border-radius: 0.0625rem;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button:last-child {
-  margin-right: 0;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-default {
-  background-color: #ffffff;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-red {
-  background-color: #e51c23;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-blue {
-  background-color: #007aff;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-green {
-  background-color: #00ca3c;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-gray {
-  background-color: #969696;
 }
 
 .thumbnail-container {
@@ -6211,11 +6118,19 @@ body.thumbnail-modal-active {
   margin-left: 0.9375rem;
 }
 
-.thumbnail-container .thumbnail div.thumbnail-bottom img {
-  width: 0.9375rem;
-  height: 0.9375rem;
-  content: url("../media/icons/icon_delete.svg");
+.thumbnail-container .thumbnail div.thumbnail-bottom .icon-delete {
+  width: 1.125rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/icon_delete.svg");
+  mask-image: url("../media/icons/icon_delete.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #CCCED1;
+  vertical-align: text-top;
   cursor: pointer;
+  margin: 0.625rem;
 }
 
 .thumbnail-container .thumbnail-upload {
@@ -6257,7 +6172,6 @@ body.thumbnail-modal-active {
   display: inline-block;
   width: 100%;
   height: 100%;
-  text-align: center;
   color: #ACB4BF;
   font-weight: 700;
   font-size: 1.875rem;
@@ -6296,7 +6210,6 @@ body.thumbnail-modal-active {
   right: 0;
   width: 77.5rem;
   margin: 0 auto 2em auto;
-  box-sizing: border-box;
   background-color: #ffffff;
   box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
   border: 0.0625rem solid #EBEBEB;
@@ -6304,56 +6217,11 @@ body.thumbnail-modal-active {
   width: 45rem;
 }
 
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out {
-  position: absolute;
-  right: 0.5em;
-  top: 0.5em;
-  width: 2rem;
-  height: 2rem;
-  opacity: 0.5;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in:hover,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out:hover {
-  opacity: 1;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in:before,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in:after,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out:before,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out:after {
-  position: absolute;
-  left: 0.9375rem;
-  content: ' ';
-  height: 2.0625rem;
-  width: 0.125rem;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in:before,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in:after {
-  background-color: #333333;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out:before,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out:after {
-  background-color: #CCCCCC;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in:before,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out:before,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-in:after,
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-close-out:after {
-  transform: rotate(45deg);
-}
-
 .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-title {
   height: 3.375rem;
   color: #3F4B56;
   font-size: 1rem;
   font-weight: 500;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   border-bottom: solid 0.0625rem #EBEBEB;
   padding: 1.125rem 0 0 1.25rem;
 }
@@ -6361,52 +6229,13 @@ body.thumbnail-modal-active {
 .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-body {
   overflow: auto;
   height: 40rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   border-bottom: solid 0.0625rem #EBEBEB;
 }
 
 .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons {
   height: 5rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: right;
+  display: flex;
   padding: 1.25rem 1.25rem 1.25rem 0;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button {
-  padding: 0.6em 1em;
-  margin-right: 0.3125rem;
-  color: #3F4B56;
-  text-transform: uppercase;
-  cursor: pointer;
-  display: inline-block;
-  border: solid 0.0625rem #EBEBEB;
-  border-radius: 0.0625rem;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button:last-child {
-  margin-right: 0;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-default {
-  background-color: #ffffff;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-red {
-  background-color: #e51c23;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-blue {
-  background-color: #007aff;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-green {
-  background-color: #00ca3c;
-}
-
-.thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-gray {
-  background-color: #969696;
 }
 
 .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-body .thumbnail-container {
@@ -6422,6 +6251,7 @@ body.thumbnail-modal-active {
 
 .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-body .thumbnail-container .thumbnail div.thumbnail-img, .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-body .thumbnail-container .thumbnail div.thumbnail-icon {
   height: 100%;
+  background-size: 100% !important;
 }
 
 .reply-body {
