--- a/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
@@ -1,6 +1,6 @@
 @import "../../template/_thumbnail.scss";
 
-
+// thumnbnail > modal(type: icon) 관련 템플릿
 .thumbnail-icon-modal-wrapper {
   @include thumbnail-modal-wrapper();
 
