--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="thumbnail-bottom">
                         <label>${i18n.userDateTime(image.updateDt)}</label>
-                        <img src="" data-name="${image.name}" onclick="removeImage(this);"/>
+                        <span class="icon-delete float-right" data-name="${image.name}" onclick="removeImage(this);"/>
                     </div>
                 </div>
             `;
