--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -3038,7 +3038,6 @@ body.thumbnail-modal-active {
   right: 0;
   width: 77.5rem;
   margin: 0 auto 2em auto;
-  box-sizing: border-box;
   background-color: #ffffff;
   box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
 }
@@ -3091,8 +3090,6 @@ body.thumbnail-modal-active {
   color: #3F4B56;
   font-size: 1rem;
   font-weight: 500;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   border-bottom: solid 0.0625rem #EBEBEB;
   padding: 1.125rem 0 0 1.25rem;
 }
@@ -3100,52 +3097,13 @@ body.thumbnail-modal-active {
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-body {
   overflow: auto;
   height: 40rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   border-bottom: solid 0.0625rem #EBEBEB;
 }
 
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons {
   height: 5rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: right;
+  display: flex;
   padding: 1.25rem 1.25rem 1.25rem 0;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button {
-  padding: 0.6em 1em;
-  margin-right: 0.3125rem;
-  color: #3F4B56;
-  text-transform: uppercase;
-  cursor: pointer;
-  display: inline-block;
-  border: solid 0.0625rem #EBEBEB;
-  border-radius: 0.0625rem;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button:last-child {
-  margin-right: 0;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-default {
-  background-color: #ffffff;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-red {
-  background-color: #e51c23;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-blue {
-  background-color: #007aff;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-green {
-  background-color: #00ca3c;
-}
-
-.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-gray {
-  background-color: #969696;
 }
 
 .thumbnail-container {
@@ -3229,11 +3187,19 @@ body.thumbnail-modal-active {
   margin-left: 0.9375rem;
 }
 
-.thumbnail-container .thumbnail div.thumbnail-bottom img {
-  width: 0.9375rem;
-  height: 0.9375rem;
-  content: url("../media/icons/icon_delete.svg");
+.thumbnail-container .thumbnail div.thumbnail-bottom .icon-delete {
+  width: 1.125rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/icon_delete.svg");
+  mask-image: url("../media/icons/icon_delete.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #CCCED1;
+  vertical-align: text-top;
   cursor: pointer;
+  margin: 0.625rem;
 }
 
 .thumbnail-container .thumbnail-upload {
@@ -3275,7 +3241,6 @@ body.thumbnail-modal-active {
   display: inline-block;
   width: 100%;
   height: 100%;
-  text-align: center;
   color: #ACB4BF;
   font-weight: 700;
   font-size: 1.875rem;
