--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3924,6 +3924,7 @@ body.thumbnail-modal-active {
 
 .help-tooltip .help-tooltip-icon {
   display: inline-block;
+  cursor: pointer;
   width: 1rem;
   height: 1rem;
   -webkit-mask-image: url("../media/icons/icon_tooltip.svg");
@@ -3938,9 +3939,9 @@ body.thumbnail-modal-active {
 .help-tooltip .tooltip-contents {
   visibility: hidden;
   background-color: #ffffff;
+  color: #0098FF;
   width: 18.13rem;
   font-size: 1rem;
-  color: #0098FF;
   border: 0.0625rem solid #0098FF;
   border-radius: 0.0625rem;
   padding: 1.0625rem 0.9375rem 0.9375rem 0.9375rem;
