--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -3712,6 +3712,7 @@ button.ghost-line:disabled .icon {
 
 .help-tooltip .help-tooltip-icon {
   display: inline-block;
+  cursor: pointer;
   width: 1rem;
   height: 1rem;
   -webkit-mask-image: url("../media/icons/icon_tooltip.svg");
@@ -3726,15 +3727,15 @@ button.ghost-line:disabled .icon {
 .help-tooltip .tooltip-contents {
   visibility: hidden;
   background-color: #ffffff;
-  width: 22.5rem;
-  font-size: 0.75rem;
   color: #0098FF;
+  width: 100%;
+  font-size: 1rem;
   border: 0.0625rem solid #0098FF;
   border-radius: 0.0625rem;
-  padding: 0.8125rem;
+  padding: 1.0625rem 0.9375rem 0.9375rem 0.9375rem;
   margin: 0.25rem 0 0 0;
   position: absolute;
-  left: auto;
+  left: 0;
   z-index: 1;
   box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2);
 }
