--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -353,11 +353,12 @@ $color-picker-colorchip-border:              0.375rem solid $white;      // 6px
 /////////////////////////////// tooltip ///////////////////////////////
 $tooltip-help-size:                          1rem; // 16px
 $tooltip-help-margin:                        0.3125rem; // 5px
-$tooltip-font-size:                          0.75rem; // 12px
+$tooltip-font-size:                          1rem; // 16px
 $tooltip-contents-background:                $white;
 $tooltip-contents-color:                     $point-blue;
-$tooltip-contents-left:                      auto;
-$tooltip-contents-width:                     22.5rem; // 360px
+$tooltip-contents-left:                      0;
+$tooltip-contents-width:                     100%;
 $tooltip-contents-border:                    0.0625rem; // 1px
-$tooltip-contents-padding:                   0.8125rem;  // 13px
+$tooltip-contents-padding:                   1.0625rem 0.9375rem 0.9375rem 0.9375rem; // 17px 15px 15px 15px
 $tooltip-contents-box-shadow:                0 0 0.3125rem 0 rgba(30, 47, 63, 0.2); // 5px
+
