#9239 [템플릿 SCSS] _thumbnail.scss
- 폼 디자이너 모달창 깨짐 수정

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -3103,6 +3103,7 @@ body.thumbnail-modal-active {
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons {
   height: 5rem;
   display: flex;
+  float: right;
   padding: 1.25rem 1.25rem 1.25rem 0;
 }
 
