--- a/src/main/resources/public/src/scss/template/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/template/_thumbnail.scss
@@ -61,6 +61,7 @@
   .thumbnail-modal-buttons {
     height: 5rem; // 80px
     display: flex;
+    float: right;
     padding: 1.25rem 1.25rem 1.25rem 0; // 20px
   }
 }
