--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -367,7 +367,7 @@ $thumbnail-box-shadow:                       0 0 0.0625rem 0.0625rem $thumbnail-
 
 $thumbnail-modal-backdrop-color:             rgba(116, 147, 179, 0.5);
 $thumbnail-modal-dialog-width:               77.5rem; // 1240px;
-$thumbnail-modal-dialog-box-shadow:          0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25); /* 5px */
+$thumbnail-modal-dialog-box-shadow:          0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25); // 5px
 $thumbnail-modal-close-in-color:             #333333;
 $thumbnail-modal-close-out-color:            #CCCCCC;
 $thumbnail-btn-default-color:                $white;
