--- a/src/main/resources/public/src/scss/template/_color-picker.scss
+++ b/src/main/resources/public/src/scss/template/_color-picker.scss
@@ -109,7 +109,7 @@
     }
 
     input.slide-input {
-      width: 3rem; // 48px
+      width: 3rem !important; // 48px
       height: 2rem; // 32px
       text-align: center;
       vertical-align: middle;
