--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -143,6 +143,23 @@
     top: $logo-height;
     z-index: 999;
     overflow: auto;
+    .right {
+        right: 0.375rem // 6px
+    }
+    .os-menu-scrollbar-track {
+        background: rgba(40, 50, 56, 0.6);
+        border-radius: 0.5rem; // 8px
+        pointer-events: auto;
+        position: relative;
+        height: 100%;
+        width: 100%;
+        padding: 0 !important;
+        border: none !important;
+    }
+    .os-menu-scrollbar-handle {
+        background: #3F4B56;
+        border-radius: 0.5rem; // 8px
+    }
 }
 
 // GNB
