#9250 [기본 SCSS] process.scss : color picker 미출력 버그 수정

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -2789,6 +2789,10 @@ button .icon-delete {
   border: 0.0625rem solid #0098FF;
 }
 
+.color-picker .color-input .selected-color {
+  border: 0.1875rem solid #68717c;
+}
+
 .color-picker .color-palette {
   display: flex;
   flex-wrap: wrap;
