폼 디자이너 화면에 select box 디자인 적용 - 숨기는 경우 처리 추가

--- a/src/main/resources/public/src/scss/form/_layout.scss
+++ b/src/main/resources/public/src/scss/form/_layout.scss
@@ -117,6 +117,11 @@
       textarea {
         width: 100%;
       }
+
+      // for designed select
+      .select {
+        width: 100%;
+      }
       // 옵션
       &[id="option"] {
         position: relative;
@@ -164,6 +169,10 @@
         .property-field-toggle {
           ~ input[type=text],
           ~ select {
+            margin-top: 0.4375rem; // 7px
+          }
+          // for designed select
+          ~ .select {
             margin-top: 0.4375rem; // 7px
           }
         }
@@ -219,6 +228,10 @@
             }
             select {
                 margin-top: 0.3125rem; // 5px
+            }
+            // for designed select
+            .select {
+              margin-top: 0.3125rem; // 5px
             }
           }
         }
