--- a/src/main/resources/public/src/scss/process/_layout.scss
+++ b/src/main/resources/public/src/scss/process/_layout.scss
@@ -392,8 +392,8 @@
       flex-direction: column;
       float: right;
       width: 18.75rem;
-      height: $layout-properties-height;
-      min-height: $layout-properties-height;
+      height: 100%; // $layout-properties-height;
+      min-height: 100%; // $layout-properties-height;
       box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);  // -1px 15px 7px 0px $pressed-gray, 불투명도 60%;
       overflow-y: auto;
       background-color: #fafbfd;
