프로세스 디자이너 화면에 select box 디자인 적용

--- a/src/main/resources/public/src/scss/process/_elements.scss
+++ b/src/main/resources/public/src/scss/process/_elements.scss
@@ -23,6 +23,9 @@ textarea,
 table,
 select { width: 100%; }
 
+// for designed select
+.select { width: 100%; }
+
 svg {
   // element 들이 그려지는 영역
   g.element-container {
