--- a/src/main/resources/public/template/document/documentDisplay.html
+++ b/src/main/resources/public/template/document/documentDisplay.html
@@ -69,6 +69,7 @@
                         }
                         displayTable.appendChild(componentRow);
                     }
+                    aliceJs.initDesignedSelectTag();
                 }
             };
             aliceJs.sendXhr(opt);
